Update background image

--- a/assets/css/styles_reuniao_sacerdocio.css
+++ b/assets/css/styles_reuniao_sacerdocio.css
@@ -11,7 +11,7 @@
 	General Styles
 --------------------------*/
 .bg-img {
-  background-image: url('../img/page_bg_ordernacao.jpeg');
+  background-image: url('../img/image.png');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
